fixed alignment on picture upload signup

--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    color: grey;
 }
 
 .signup-wrapper {
@@ -230,4 +231,28 @@ h1 {
 
 #disabled-signup-button {
     background-color: grey;
+}
+
+#picture-upload-wrapper {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    border: 1px solid lightgrey;
+    border-radius: 30px;
+    margin-top: 10px;
+}
+
+#picture-upload-field {
+    background-color: white;
+    height: 25px;
+    width: 100%;
+    border: none;
+}
+
+#picture-upload-field:focus {
+    outline: none;
+}
+
+#picture-upload-field button {
+    background-color: #80f;
 }
